# Fuse-rs

./: CODE_ORGANIZATION.md  Cargo.toml  README.md
crates/fuse-node/: Cargo.toml  package.json
crates/fuse-rs/: Cargo.toml
crates/fuse-rs/examples/: query_parser_demo.rs
crates/fuse-rs/src/: lib.rs
crates/fuse-rs/src/core/: error_messages.rs  fuse.rs  mod.rs  query_parser.rs  register.rs
crates/fuse-rs/src/core/options/: config.rs  keys.rs  mod.rs
crates/fuse-rs/src/core/results/: mod.rs  search_result.rs
crates/fuse-rs/src/helpers/: get.rs  mod.rs  str_ext.rs
crates/fuse-rs/src/search/: mod.rs  search.rs  search_result.rs
crates/fuse-rs/src/search/bitmap/: bitmap_search.rs  compute_score.rs  constants.rs  convert_mask_to_indices.rs  create_pattern_alphabet.rs  mod.rs  search.rs
crates/fuse-rs/src/search/extended/: base_match.rs  exact_match.rs  extended_search.rs  fuzzy_match.rs  include_match.rs  inverse_exact_match.rs  inverse_prefix_exact_match.rs  inverse_suffix_exact_match.rs  mod.rs  parse_query.rs  prefix_exact_match.rs  suffix_exact_match.rs
crates/fuse-rs/src/tools/: fuse_index.rs  fuse_index_record.rs  key_store.rs  mod.rs  norm.rs
crates/fuse-rs/src/transform/: mod.rs  transform_matches.rs
crates/fuse-rs/tests/: mod.rs
crates/fuse-rs/tests/core/: mod.rs  query_parser_test.rs
crates/fuse-rs/tests/helpers/: get_test.rs  mod.rs  str_ext_test.rs
crates/fuse-rs/tests/search/: mod.rs
crates/fuse-rs/tests/search/bitmap/: bitmap_search_test.rs  compute_score_test.rs  convert_mask_to_indices_test.rs  create_pattern_alphabet_test.rs  mod.rs  (+1 more)
crates/fuse-rs/tests/tools/: fuse_index_test.rs  key_store_test.rs  mod.rs  norm_test.rs
crates/fuse-wasm/: Cargo.toml  package.json
(+33 files in other folders)
