[package]
name = "fuse-node"
version = "0.1.0"
edition = "2024"
authors = ["Md Sadique Inam <md.sadique32@gmail.com>"]
description = "Node.js bindings for fuse-rs using Neon"
license = "MIT"
repository = "https://github.com/mdsadiqueinam/fuse-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
fuse-rs = { path = "../fuse-rs" }
neon = "0.10.1"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
