[package]
name = "fuse-rs"
version = "0.1.0"
edition = "2024"
authors = ["Md Sadique Inam <md.sadique32@gmail.com>"]
description = "A lightweight fuzzy-search library for Rust"
repository = "https://github.com/mdsadiqueinam/fuse-rs"
license = "MIT"
readme = "../../README.md"

[dependencies]
serde_json = "1.0.140"
unicode-normalization = "0.1.24"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
derivative = "2.2"
lazy_static = "1.5.0"
once_cell = "1.21.3"
