[package]
name = "fuse-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Md Sadique Inam <md.sadique32@gmail.com>"]
description = "WebAssembly bindings for fuse-rs"
repository = "https://github.com/username/fuse-rs"
license = "MIT"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fuse-rs = { path = "../fuse-rs" }
wasm-bindgen = "0.2.91"
js-sys = "0.3.68"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.41"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.41"

[profile.release]
opt-level = 3
lto = true
